Changed Base64 Codec and exception handling.